@@ -10,6 +10,7 @@
 
 
 Version 4.2.0 CA
+ - Changed: Improved Shared Note "detection for formatting" a little more (windmillway)
  - Merged: Merge changes r5063 - r5073 from the trunk. (windmillway)
  - Added: Theme dependant note.gif and addnote.gif to each respective theme (windmillway)
  - Fixed: Census Assistant error. Corrected function getCensBirthPlace() in class_person.php (windmillway)
